# synthnn

./: CITATION.cff  LICENSE  README.md  pyproject.toml  readme.md
demos/: ca_cigarette.py  sim.py
src/synthnn/: __init__.py
src/synthnn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
synthnn/: __init__.py  base.py
tests/: ca_cigarette.py  sim.py
