[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "synthnn"
version = "1.1.5"
authors = [
  { name="Rivka Lipkovitz", email="rivkal@mit.edu" },
]
description = "A Python package implementing the synthetic nearest neighbors estimator for panel data causal inference."
readme = "README.md"
requires-python = ">=3.9"

license = { file = "LICENSE" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "plotly>=4.0.0",
    "scikit-learn>=1.0"
]

[project.urls]

Homepage = "https://github.com/rivkalipko/synthnn"
"Bug Tracker" = "https://github.com/rivkalipko/synthnn/issues"